# limitpush

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  build.rs  index.html  limitpush-11c9add464ad26c7.js  limitpush-1ade3ceb0bfe1e5b.js  limitpush-32cb28083bed1c39.js  limitpush-4c872aebd9c60296.js  limitpush-5b344c388f51feed.js  limitpush-d2626fd8089362b0.js  limitpush-e89bec7bb228c1f2.js  limitpush-f7aaffb76ec9e99f.js
.cargo/: config.toml
.github/workflows/: deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
changelogs/: v0.0.2.md  v0.1.0.md  v2.1.0.md
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/camera_system/: Cargo.toml
crates/camera_system/src/: camera.rs  lib.rs
crates/camera_system/src/pan_orbit_camera/: input.rs  mod.rs  touch.rs  util.rs
crates/cross_setup/: Cargo.toml
crates/cross_setup/src/: debug.rs  lib.rs  plugins.rs  std.rs  terminal.rs  xr.rs
crates/data/: Cargo.toml
crates/data/src/: components.rs  lib.rs  resources.rs  states.rs
crates/debug/: Cargo.toml
crates/debug/src/: lib.rs
crates/debug/src/features/: adapter_debug.rs  avian_debug.rs  debug_menu.rs  log.rs  mod.rs  panic_catcher.rs  wireframe.rs
crates/dep_reexp/: Cargo.toml
crates/dep_reexp/src/: lib.rs
crates/dynamic_obj/: Cargo.toml
crates/dynamic_obj/src/: lib.rs  spawn.rs  update.rs
crates/game/: Cargo.toml
crates/game/src/: cube.rs  debug.rs  lib.rs  light.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs  movement.rs  spawn.rs
crates/player/src/mobile_controller/: mod.rs
crates/states/: Cargo.toml
crates/states/src/: lib.rs
crates/states/src/screens/: loading.rs  menu.rs  mod.rs  pipeline.rs  playing.rs
crates/static_obj/: Cargo.toml
crates/static_obj/src/: lib.rs  spawn.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  menu.rs
crates/window_manager/: Cargo.toml
crates/window_manager/src/: lib.rs
crates/window_manager/src/window/: mod.rs
crates/window_manager/src/window/features/: kill.rs  mod.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs  objects_queue.rs
crates/world/src/levels/: openworld.rs
crates/world/src/scene_builder/: mod.rs
crates/world/src/scene_builder/lobby/: mod.rs  setup.rs
depgraph/: README.md  commands.txt
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
native/mobile/: Cargo.toml
native/mobile/mobile.xcodeproj/: project.pbxproj
native/mobile/src/: lib.rs
scripts/: README.md  compile_all_targets.bat  compile_all_targets.sh  project_setup.bat  project_setup.sh  update_dependencies.bat  update_graphs.bat  update_graphs.sh  update_workspace.bat  update_workspace.sh
src/: audio.rs  lib.rs  main.rs
src/game/: camera.rs  mod.rs  player.rs
src/game/camera/: mod.rs  pan_orbit_camera.rs
src/game/player/: mod.rs  movement.rs
src/game/world/: mod.rs
src/game/world/levels/: debug.rs  mod.rs  openworld.rs
src/screens/: loading.rs  menu.rs
src/states/: mod.rs
src/states/screens/: loading.rs  menu.rs  mod.rs  pipeline.rs  playing.rs
src/window/features/: kill.rs
src/world/: mod.rs
src/world/levels/: openworld.rs
trunk_build/: index.html  limitpush-7d53466f72f62457.js
trunk_build/assets/models/animated/player/: Worker_Female.gltf
web/: index.html
