[package]
name = "limitpush" # BRANDING: Change according to your project!
version = "0.1.0"
authors = ["heydocode"] # BRANDING: Change according to your project!
edition = "2021"
publish = false
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = [ 
    "crates/cross_setup",
    "crates/dep_reexp", 
    "mobile", 
    "crates/dynamic_obj", 
    "crates/static_obj",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true
strip = "none"
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
# NATIVE (Tier 1)
desktop = ["cross_setup/desktop"]
mobile = ["cross_setup/mobile"]
# + wasm, which is guessed according to target_family value
# EXOTIC & NO-STD (Tier 2)
terminal = ["cross_setup/terminal"]
embedded = ["cross_setup/embedded"]

# Warning: this feature is only intended to work 
# with `desktop` platform-specific feature
debug = ["cross_setup/debug", "dynamic_obj/debug"]

[dependencies]
dep_reexp = { path = "crates/dep_reexp" }
cross_setup = { path = "crates/cross_setup" }
static_obj = { path = "crates/static_obj" }
dynamic_obj = { path = "crates/dynamic_obj" }