[package]
name = "limitpush"                               # BRANDING: Change according to your project!
version = "0.1.0"
authors = ["heydocode"]                          # BRANDING: Change according to your project!
edition = "2021"
publish = false
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = [
    "crates/cross_setup",
    "mobile",
    "crates/game",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
debug = true
strip = "none"
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
# NATIVE (Tier 1)
desktop = ["cross_setup/desktop", "game/desktop"]
mobile = ["cross_setup/mobile", "game/mobile"]
# [ ] Implement
xr = ["cross_setup/xr", "game/xr"]
# + wasm, which is guessed according to target_family value
# EXOTIC & NO-STD (Tier 2)
terminal = ["cross_setup/terminal", "game/terminal"]
embedded = ["cross_setup/embedded", "game/embedded"]

# Warning: this feature is only intended to work 
# with `desktop` platform-specific feature
debug = [
    "game/debug", 
    "build_generate_graphs", # Remove if you don't need graphs, you can make this at release if you wish
]

# build.rs features
# # Generates graphs in depgraph/
build_generate_graphs = []

[dependencies]
cross_setup = { path = "crates/cross_setup" }
game = { path = "crates/game" }
bevy = { version = "0.15", default-features = false }