[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false }
bevy_kira_audio = { version = "*", default-features = false, features = [
    # Support audio files of OGG format
    "ogg"
]}

# Internal crates
# Avoid them to escape cyclic dependencies
states = { path = "../states"} # Dependency crate (= safe)