[package]
name = "camera_system"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    "animation",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin"
] }
bevy_egui = "0.30.0"
avian3d = "0.1.2"

# Internal crates
# Avoid them to escape cyclic dependencies
player = {path = "../player"} # Dependency & dependent crate (= be aware of cyclic dependencies issue)
states ={ path = "../states"} # Dependency crate (= safe)
