[package]
name = "camera_system"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false }
avian3d = { version = "*", default-features = false }
bevy_panorbit_camera = { version = "*", default-features = false }

# Internal crates
# Avoid them to escape cyclic dependencies
player = {path = "../player"} # Dependency & dependent crate (= be aware of cyclic dependencies issue)
states = { path = "../states"} # Dependency crate (= safe)