[package]
name = "cross_setup"
version = "0.1.0"
edition = "2021"
description = "Configures the entire app according to platform-specific features"

[features]
# NATIVE (Tier 1)
desktop = ["dep_reexp/desktop"]
mobile = ["dep_reexp/mobile"]
# + wasm, which is guessed according to target_family value
# EXOTIC & NO-STD (Tier 2)
terminal = ["dep_reexp/terminal"]
embedded = ["dep_reexp/embedded"]

[dependencies]
data = { path = "../data" }
dep_reexp = { path = "../dep_reexp" }