[package]
name = "debug"
version = "0.1.0"
edition = "2021"

[features]
dev = [
    "avian-debug",
    "diagnostics-logs",
]

avian-debug = []
diagnostics-logs = []

[dependencies]
bevy = { version = "*", default-features = false, features = [
    # "bevy_pbr", See the limitpush Cargo.toml!
]}
avian3d = { version = "*", default-features = false }

# Here we want it only on desktop builds
[target.'cfg(not(any(target_os = "ios", target_os = "android", target_family = "wasm")))'.dependencies]
bevy-panic-handler = { version = "*", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-inspector-egui = { version = "0.27.0", default-features = false }
bevy_egui = { version = "0.30.0", default-features = false, features = [
    "render"
]}
bevy_mod_debugdump = { version = "*", default-features = false, features = [
    "render_graph",
]}