[package]
name = "debug"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "dev"
]
dev = [
    "diagnostics-logs",
]
diagnostics-logs = []

[dependencies]
bevy = { version = "*", default-features = false }
avian3d = { version = "*", default-features = false }

# Here we want it only on desktop builds
[target.'cfg(not(any(target_os = "ios", target_os = "android", target_family = "wasm")))'.dependencies]
bevy-panic-handler = { version = "*", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy-inspector-egui = { version = "0.27.0", default-features = false }
bevy_egui = { version = "0.30.0", default-features = false, features = [
    "render"
]}