[package]
name = "dep_reexp"
version = "0.1.0"
edition = "2021"
description = "Exports essential dependencies to internal crates"

[features]
bevy_default = [
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_window",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/multi_threaded",
    "bevy/bevy_state",
    "bevy/tonemapping_luts",
    "bevy/bevy_winit",
]

# NATIVE (Tier 1)
desktop = ["bevy_default"]
mobile = ["bevy_default"]
# + wasm, which is guessed according to target_family value
# EXOTIC & NO-STD (Tier 2)
terminal = [
    "bevy_default",
    "dep:bevy_ratatui",
    "dep:bevy_ratatui_camera",
    "dep:crossterm",
    "dep:log",
    "dep:ratatui",
    "dep:tui-logger"
]
embedded = []

bevy_pbr = ["bevy/bevy_pbr"]
bevy_remote = ["bevy/bevy_remote"]

[dependencies]
# Please mind that features are global and affect
# all internal crates!
bevy = { version = "0.16.0", default-features = false }
bevy_ratatui = { version = "0.7.0", optional = true }
bevy_ratatui_camera = { git = "https://github.com/cxreiff/bevy_ratatui_camera", optional = true }
crossterm = { version = "0.28.1", optional = true }
log = { version = "0.4.22", optional = true }
ratatui = { version = "0.29.0", optional = true }
tui-logger = { version = "0.14.0", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_window",
    "bevy_asset",
    "bevy_scene",
    "multi_threaded",
    "bevy_state",
    "tonemapping_luts",
    "bevy_winit",
    "webgl2"
]}