[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    # "bevy_pbr", See the limitpush Cargo.toml!
]}
avian3d = "0.1.2"
virtual_joystick = { version = "*", default-features = false, features = [ 
    "serde" 
] }

# Internal crates
# Avoid them to escape cyclic dependencies
states = { path = "../states"} # Dependency crate (= safe)
