[package]
name = "states"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    "animation",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin"
] }
bevy_asset_loader = "0.21.0"
bevy_kira_audio = "0.20.0"
bevy_pipelines_ready = "0.4.0"
bevy_vector_shapes = "0.8.2"