[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false }
webbrowser = { version = "*", default-features = false }

# Internal crates
# Avoid them to escape cyclic dependencies
states = { path = "../states"} # Dependency crate (= safe)