[package]
name = "window_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = [
    "animation",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "jpeg",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin"
] }

# Only desktop
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
# Synchronize with Bevy dependencies for window management and image loading
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.4", default-features = false }