[package]
name = "window_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Synchronize with Bevy dependencies for window management and image loading
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.4", default-features = false }