[package]
name = "world"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "*", default-features = false, features = [
]}
avian3d = { version = "*", default-features = false }

# Internal crates
# Avoid them to escape cyclic dependencies
states = { path = "../states"} # Dependency crate (= safe)
player = { path = "../player"} # Dependency & dependent crate (= be aware of cyclic dependencies issue)
